# complex-networks-project

./: .gitignore  Makefile  distributed-systems-final-project_dbg  meson.build  meson_options.txt  run.sh  tree.txt
docs/: QUICKSTART.md  README.md  SUMMARY.md
include/: anonymous_election.h  arbitrary_election.h
simulations/: .qtenvrc
src/: anonymous_election.cpp  arbitrary_election.cpp  tsn_node.cpp
